Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -138,7 +138,7 @@ body.edit {
 .widget {
     &.extendednavigation {
         display: inline-block;
-        float: right;
+		width: 100%;
         padding: 20px 0 10px;
         @media @tablet {
             display: block;
